# ros_babel_fish

./: .codecov.yml  .gitignore  .travis.yaml  .travis.yml  LICENSE  README.md
ros_babel_fish/: CHANGELOG.rst  CMakeLists.txt  download_benchmark_data.py  package.xml  run_all_benchmarks.py
ros_babel_fish/benchmarks/: __init__.py  benchmark.md  benchmark_float_msg.py  benchmark_float_msg_base.cpp  benchmark_float_msg_rbf.cpp  benchmark_float_msg_rbf_extractor.cpp  benchmark_float_msg_rti.cpp  benchmark_image_simple.py  benchmark_image_simple_base.cpp  benchmark_image_simple_rbf.cpp  benchmark_image_simple_rbf_extractor.cpp  benchmark_image_simple_rti.cpp  benchmark_joint_state.py  benchmark_joint_state_base.cpp  benchmark_joint_state_rbf.cpp  benchmark_joint_state_rti.cpp
ros_babel_fish/docs/: .gitignore  Doxyfile  conf.py  index.rst
ros_babel_fish/examples/: action_client.cpp  any_publisher.cpp  any_subscriber.cpp  message_info.cpp  rosbag.cpp  rosbag_frame_ids.cpp  service_client.cpp  service_info.cpp  service_server.cpp  troll_node.cpp
ros_babel_fish/include/ros_babel_fish/: babel_fish.h  babel_fish_message.h  exceptions.h  macros.h  message.h  message_creation.h  message_description.h  message_extractor.h  message_template.h  message_types.h
ros_babel_fish/include/ros_babel_fish/actionlib/: babel_fish_action.h  babel_fish_action_feedback.h  babel_fish_action_goal.h  babel_fish_action_result.h
ros_babel_fish/include/ros_babel_fish/actionlib/client/: babel_fish_action_client.h  simple_action_client.h
ros_babel_fish/include/ros_babel_fish/exceptions/: babel_fish_exception.h  invalid_location_exception.h  invalid_message_path_exception.h  invalid_template_exception.h
ros_babel_fish/include/ros_babel_fish/generation/: description_provider.h  message_creation.h  message_template.h
ros_babel_fish/include/ros_babel_fish/generation/providers/: embedded_python_description_provider.h  integrated_description_provider.h  message_only_description_provider.h
ros_babel_fish/include/ros_babel_fish/message_types/: array_message.h  compound_message.h  value_message.h
ros_babel_fish/include/ros_babel_fish/messages/: array_message.h  compound_message.h  value_message.h
ros_babel_fish/include/ros_babel_fish/messages/internal/: value_compatibility.h
ros_babel_fish/src/: babel_fish.cpp  babel_fish_message.cpp  message.cpp  message_creation.cpp  message_extractor.cpp
ros_babel_fish/src/generation/: description_provider.cpp  message_creation.cpp
ros_babel_fish/src/generation/providers/: embedded_python_description_provider.cpp  integrated_description_provider.cpp
ros_babel_fish/src/message_types/: array_message.cpp  compound_message.cpp  value_message.cpp
ros_babel_fish/src/messages/: array_message.cpp  compound_message.cpp  value_message.cpp
ros_babel_fish/test/: action_client.cpp  action_client_test_server.cpp  all_tests.test  common.h  message.cpp  message_comparison.h  message_decoding.cpp  message_encoding.cpp  message_extractor.cpp  message_lookup.cpp  service_client.cpp  service_client_test_services.cpp  service_lookup.cpp  test_action_client.test  test_message.test  test_message_decoding.test  test_message_encoding.test  test_message_extractor.test  test_message_lookup.test  test_service_client.test  test_service_lookup.test
ros_babel_fish_test_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros_babel_fish_test_msgs/action/: SimpleTest.action
ros_babel_fish_test_msgs/msg/: TestArray.msg  TestMessage.msg  TestSubArray.msg
