<?xml version="1.0"?>
<package format="2">
  <name>ros_babel_fish</name>
  <version>0.9.0</version>
  <description>The ros_babel_fish package</description>

  <maintainer email="ros_babel_fish@stefanfabian.me">Stefan Fabian</maintainer>

  <license>MIT</license>

  <author email="ros_babel_fish@stefanfabian.me">Stefan Fabian</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>openssl</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>ros_babel_fish_test_msgs</test_depend>
  <test_depend>rosapi</test_depend>
  <test_depend>roscpp_tutorials</test_depend>
  <test_depend>rosgraph_msgs</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>std_srvs</test_depend>
  <test_depend>visualization_msgs</test_depend>
</package>
