<?xml version="1.0"?>
<package format="2">
  <name>ros_babel_fish_test_msgs</name>
  <version>0.9.3</version>
  <description>Test messages for the ros_babel_fish project tests.</description>

  <maintainer email="ros_babel_fish@stefanfabian.me">Stefan Fabian</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>actionlib_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
